Fixed main content overflowing underneath the footer, also fixed margins and paddings in the navigation bar

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -6,7 +6,10 @@ html {
 body {
     font-family: 'Red Hat Mono', monospace;
     padding-top: 164px;
-    padding-bottom: 164px;
+}
+
+main {
+    padding-bottom: 215px;
 }
 
 /* ------------------ Navigation Bar, Page and Footer */
@@ -27,6 +30,8 @@ body {
 
 .nav-bg {
     background-color: #631918;
+    margin-right: 1.5em;
+    padding: 0.5em;
 }
 
 .yellow-bg {
